change to candidatelayout to vertical, change the select from Alt to number only

--- a/fcitx/taigime.conf
+++ b/fcitx/taigime.conf
@@ -1,7 +1,7 @@
 [CodeTable]
 UniqueName=taigime
 Name=Taiwanese IME
-Name[zh_CN]=台語輸入法
+Name[zh_TW]=台語輸入法
 IconName=TaigIME.png
 File=taigime.mb
 AdjustOrder=AdjustFreq
@@ -16,4 +16,5 @@ ExactMatch=True
 PromptTableCode=False
 Enabled=True
 LangCode=nan_TW
-ChooseModifier=Alt
+CandidateWordNumber=9
+CandidateLayout=Vertical
